--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="en" >
-  <!--  data-theme="dark" -->
+<html lang="en" data-theme="light">
+  
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/icon.png" />
